--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,35 +1,34 @@
 name: Newman Run
 
-on: 
+on:
   push:
     branches:
       - main
+
 jobs:
   newman:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Create dir 
-        run: |
-          mkdir testArtifacts
-          
+      - name: Check out the code
+        uses: actions/checkout@v3
 
+      - name: Create directory for artifacts
+        run: mkdir testArtifacts
+
+      # Configura o ambiente
       - name: Install Node
         uses: actions/setup-node@v3.4.1
-        
-      - name: Install Newman 
+
+      - name: Install Newman and htmlextra reporter
         run: |
           npm install -g newman
           npm install -g newman-reporter-htmlextra
-      - name: Run Test
+
+      - name: Run Tests
         run: newman run ServeRest.postman_collection.json -e serveRest_env.postman_environment.json -r cli,htmlextra
-        
-      - name: Report
-        uses: actions/upload-artifact@v3.1.2 
+
+      - name: Upload Report
+        uses: actions/upload-artifact@v3.1.2
         with:
-          name: Reports 
+          name: Reports
           path: newman
-
-
-      
