--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,9 +15,11 @@ jobs:
       - name: Create directory for artifacts
         run: mkdir testArtifacts
 
-      # Configura o ambiente
+      # Configura o ambiente com Node 20
       - name: Install Node
-        uses: actions/setup-node@v3.4.1
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
       - name: Install Newman and htmlextra reporter
         run: |
@@ -25,10 +27,10 @@ jobs:
           npm install -g newman-reporter-htmlextra
 
       - name: Run Tests
-        run: newman run ServeRest.postman_collection.json -e serveRest_env.postman_environment.json -r cli,htmlextra
+        run: newman run ServeRest.postman_collection.json -e serveRest_env.postman_environment.json -r cli,htmlextra --reporter-htmlextra-export testArtifacts/report.html
 
       - name: Upload Report
         uses: actions/upload-artifact@v3.1.2
         with:
           name: Reports
-          path: newman
+          path: testArtifacts
